Initial AI-generated content
Prompt: create a simple email template website...

Co-Authored-By: Big Pickle AI <noreply@opencode.ai>

--- a/index.html
+++ b/index.html
@@ -3,9 +3,116 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>project-96660b1769699644724</title>
+    <title>Email Templates - Simple and Professional</title>
+    <style>
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            margin: 0;
+            padding: 0;
+            line-height: 1.6;
+            color: #333;
+            background-color: #f4f4f4;
+        }
+        header {
+            background-color: #007bff;
+            color: white;
+            padding: 2rem 1rem;
+            text-align: center;
+        }
+        header h1 {
+            margin: 0;
+            font-size: 2.5rem;
+        }
+        header p {
+            font-size: 1.2rem;
+            margin: 0.5rem 0 0;
+        }
+        main {
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 2rem 1rem;
+        }
+        .templates h2 {
+            text-align: center;
+            margin-bottom: 2rem;
+            color: #007bff;
+        }
+        .template-grid {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 2rem;
+            justify-content: center;
+        }
+        .template {
+            background-color: white;
+            border-radius: 8px;
+            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+            padding: 1.5rem;
+            width: calc(33.333% - 2rem);
+            min-width: 250px;
+            text-align: center;
+        }
+        .template h3 {
+            margin-top: 0;
+            color: #007bff;
+        }
+        footer {
+            background-color: #333;
+            color: white;
+            text-align: center;
+            padding: 1rem;
+            margin-top: 2rem;
+        }
+        @media (max-width: 768px) {
+            .template {
+                width: calc(50% - 2rem);
+            }
+        }
+        @media (max-width: 480px) {
+            .template {
+                width: 100%;
+            }
+        }
+    </style>
 </head>
 <body>
-    <!-- Blank white page -->
+    <header>
+        <h1>Email Templates</h1>
+        <p>Create beautiful, professional emails with our simple templates</p>
+    </header>
+    <main>
+        <section class="templates">
+            <h2>Featured Templates</h2>
+            <div class="template-grid">
+                <div class="template">
+                    <h3>Welcome Email</h3>
+                    <p>A friendly welcome message for new subscribers. Perfect for introducing your brand and building relationships.</p>
+                </div>
+                <div class="template">
+                    <h3>Newsletter</h3>
+                    <p>Weekly updates and news in a clean, readable format. Keep your audience engaged with regular content.</p>
+                </div>
+                <div class="template">
+                    <h3>Promotional</h3>
+                    <p>Highlight your offers with eye-catching designs. Drive sales with compelling promotional emails.</p>
+                </div>
+                <div class="template">
+                    <h3>Thank You</h3>
+                    <p>Show appreciation to your customers after purchases or sign-ups. Build loyalty with personalized thanks.</p>
+                </div>
+                <div class="template">
+                    <h3>Announcement</h3>
+                    <p>Share important news and updates. Keep your audience informed with professional announcements.</p>
+                </div>
+                <div class="template">
+                    <h3>Reminder</h3>
+                    <p>Gentle reminders for upcoming events or deadlines. Ensure your messages don't go unnoticed.</p>
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2023 Email Templates Inc. All rights reserved.</p>
+    </footer>
 </body>
 </html>
